@@ -99,6 +99,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-3811: PigServer.registerScript() wraps exception incorrectly on parsing errors (prkommireddi)
+
 PIG-3806: PigServer constructor throws NPE after PIG-3765 (aniket486)
 
 PIG-3801: Auto local mode does not call storeSchema (aniket486)
